[BUG #6893] qx.Mobile Slider reacts slow on iOS6
* Removed unnecessary CSS parts for iOS6 fix.

--- a/framework/source/resource/qx/mobile/less/basic/_slider.less
+++ b/framework/source/resource/qx/mobile/less/basic/_slider.less
@@ -4,7 +4,6 @@
 
 .slider {
   // iOS6 flickering bug fix
-  -webkit-perspective: 1000;
   -webkit-backface-visibility: hidden;
 
   .background-clip(padding-box);
@@ -29,5 +28,5 @@
   @size:25px;
   height:@size;
   width:@size;
-  .border-radius(@size);
+  .border-radius(@size*2);
 }
